{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 31,
  "lineage": "1aff8995-6292-e0eb-ac8b-a69d279b19cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:412675759620:instance/i-0083ea64939f9dafc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0083ea64939f9dafc",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-081941b0ed0124c41",
            "private_dns": "ip-10-10-1-130.ec2.internal",
            "private_ip": "10.10.1.130",
            "public_dns": "ec2-3-235-59-208.compute-1.amazonaws.com",
            "public_ip": "3.235.59.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ca7ee0fa5c10c172",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09980bec1319e3b4d",
            "tags": {
              "Name": "jenkins_primary_tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09feae6ef956dc9cd"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw_primary",
            "aws_key_pair.primary_key",
            "aws_main_route_table_association.set-primary-default-rt-assoc",
            "aws_route_table.internet_route_primary",
            "aws_security_group.jenkins_sg_primary",
            "aws_security_group.lb_sg",
            "aws_subnet.primary_subnet_1",
            "aws_vpc.vpc_primary",
            "aws_vpc.vpc_secondary",
            "aws_vpc_peering_connection.primary_to_secondary",
            "data.aws_availability_zones.azs",
            "data.aws_ssm_parameter.linuxAMI_primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0528a5175983e7f28",
            "arn": "arn:aws:ec2:us-west-2:412675759620:instance/i-0d5475a0540b36d4c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5475a0540b36d4c",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07f1bc8ca4a3868e6",
            "private_dns": "ip-192-10-1-62.us-west-2.compute.internal",
            "private_ip": "192.10.1.62",
            "public_dns": "ec2-35-164-64-169.us-west-2.compute.amazonaws.com",
            "public_ip": "35.164.64.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02b24bc7a79ca0e07",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc558d558258c151",
            "tags": {
              "Name": "jenkins_secondary_tf_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b3dc5f0a4ef571a8"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins-primary",
            "aws_internet_gateway.igw_primary",
            "aws_internet_gateway.igw_secondary",
            "aws_key_pair.primary_key",
            "aws_key_pair.secondary_key",
            "aws_main_route_table_association.set-primary-default-rt-assoc",
            "aws_main_route_table_association.set-secondary-default-rt-assoc",
            "aws_route_table.internet_route_primary",
            "aws_route_table.internet_route_secondary",
            "aws_security_group.jenkins_sg_primary",
            "aws_security_group.jenkins_sg_secondary",
            "aws_security_group.lb_sg",
            "aws_subnet.primary_subnet_1",
            "aws_subnet.secondary_subnet_1",
            "aws_vpc.vpc_primary",
            "aws_vpc.vpc_secondary",
            "aws_vpc_peering_connection.primary_to_secondary",
            "data.aws_availability_zones.azs",
            "data.aws_ssm_parameter.linuxAMI_primary",
            "data.aws_ssm_parameter.linuxAMI_secondary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0528a5175983e7f28",
            "arn": "arn:aws:ec2:us-west-2:412675759620:instance/i-0ca7a8cefdeaca319",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca7a8cefdeaca319",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-096f8f2ab1b31f471",
            "private_dns": "ip-192-10-1-96.us-west-2.compute.internal",
            "private_ip": "192.10.1.96",
            "public_dns": "ec2-54-245-203-212.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.203.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09369c144e9b9f46f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc558d558258c151",
            "tags": {
              "Name": "jenkins_secondary_tf_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b3dc5f0a4ef571a8"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins-primary",
            "aws_internet_gateway.igw_primary",
            "aws_internet_gateway.igw_secondary",
            "aws_key_pair.primary_key",
            "aws_key_pair.secondary_key",
            "aws_main_route_table_association.set-primary-default-rt-assoc",
            "aws_main_route_table_association.set-secondary-default-rt-assoc",
            "aws_route_table.internet_route_primary",
            "aws_route_table.internet_route_secondary",
            "aws_security_group.jenkins_sg_primary",
            "aws_security_group.jenkins_sg_secondary",
            "aws_security_group.lb_sg",
            "aws_subnet.primary_subnet_1",
            "aws_subnet.secondary_subnet_1",
            "aws_vpc.vpc_primary",
            "aws_vpc.vpc_secondary",
            "aws_vpc_peering_connection.primary_to_secondary",
            "data.aws_availability_zones.azs",
            "data.aws_ssm_parameter.linuxAMI_primary",
            "data.aws_ssm_parameter.linuxAMI_secondary"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0528a5175983e7f28",
            "arn": "arn:aws:ec2:us-west-2:412675759620:instance/i-052fb3f8046123ffc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052fb3f8046123ffc",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0de552770c4f7de72",
            "private_dns": "ip-192-10-1-184.us-west-2.compute.internal",
            "private_ip": "192.10.1.184",
            "public_dns": "ec2-34-219-145-254.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.145.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c3621f88fc2398e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc558d558258c151",
            "tags": {
              "Name": "jenkins_secondary_tf_3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b3dc5f0a4ef571a8"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins-primary",
            "aws_internet_gateway.igw_primary",
            "aws_internet_gateway.igw_secondary",
            "aws_key_pair.primary_key",
            "aws_key_pair.secondary_key",
            "aws_main_route_table_association.set-primary-default-rt-assoc",
            "aws_main_route_table_association.set-secondary-default-rt-assoc",
            "aws_route_table.internet_route_primary",
            "aws_route_table.internet_route_secondary",
            "aws_security_group.jenkins_sg_primary",
            "aws_security_group.jenkins_sg_secondary",
            "aws_security_group.lb_sg",
            "aws_subnet.primary_subnet_1",
            "aws_subnet.secondary_subnet_1",
            "aws_vpc.vpc_primary",
            "aws_vpc.vpc_secondary",
            "aws_vpc_peering_connection.primary_to_secondary",
            "data.aws_availability_zones.azs",
            "data.aws_ssm_parameter.linuxAMI_primary",
            "data.aws_ssm_parameter.linuxAMI_secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412675759620:internet-gateway/igw-02e746911e86f30ba",
            "id": "igw-02e746911e86f30ba",
            "owner_id": "412675759620",
            "vpc_id": "vpc-0afa464e735955a14"
          },
          "dependencies": [
            "aws_vpc.vpc_primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:412675759620:internet-gateway/igw-021e281abd83b0a2f",
            "id": "igw-021e281abd83b0a2f",
            "owner_id": "412675759620",
            "vpc_id": "vpc-0cb3f15947612bd9a"
          },
          "dependencies": [
            "aws_vpc.vpc_secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:412675759620:loadbalancer/app/jenkins-lb/abe0869af5ab5f31",
            "arn_suffix": "app/jenkins-lb/abe0869af5ab5f31",
            "dns_name": "jenkins-lb-2092232897.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:412675759620:loadbalancer/app/jenkins-lb/abe0869af5ab5f31",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-lb",
            "security_groups": [
              "sg-0f839c116a171177b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09980bec1319e3b4d"
              },
              {
                "subnet_id": "subnet-0c4bedce1d3fd01e4"
              }
            ],
            "subnets": [
              "subnet-09980bec1319e3b4d",
              "subnet-0c4bedce1d3fd01e4"
            ],
            "tags": {
              "Name": "Jenkins-LB"
            },
            "vpc_id": "vpc-0afa464e735955a14",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.primary_subnet_1",
            "aws_subnet.primary_subnet_2",
            "aws_vpc.vpc_primary",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:412675759620:listener/app/jenkins-lb/abe0869af5ab5f31/a8354b470eb2dc10",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:412675759620:listener/app/jenkins-lb/abe0869af5ab5f31/a8354b470eb2dc10",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:412675759620:loadbalancer/app/jenkins-lb/abe0869af5ab5f31",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.application-lb",
            "aws_security_group.lb_sg",
            "aws_subnet.primary_subnet_1",
            "aws_subnet.primary_subnet_2",
            "aws_vpc.vpc_primary",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:412675759620:targetgroup/app-lb-tg/b2e00224a5da34e9",
            "arn_suffix": "targetgroup/app-lb-tg/b2e00224a5da34e9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-299",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:412675759620:targetgroup/app-lb-tg/b2e00224a5da34e9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jenkins-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0afa464e735955a14"
          },
          "dependencies": [
            "aws_vpc.vpc_primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins_primary_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:412675759620:targetgroup/app-lb-tg/b2e00224a5da34e9-20201116054948825600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:412675759620:targetgroup/app-lb-tg/b2e00224a5da34e9",
            "target_id": "i-0083ea64939f9dafc"
          },
          "dependencies": [
            "aws_instance.jenkins-primary",
            "aws_internet_gateway.igw_primary",
            "aws_key_pair.primary_key",
            "aws_lb_target_group.app-lb-tg",
            "aws_main_route_table_association.set-primary-default-rt-assoc",
            "aws_route_table.internet_route_primary",
            "aws_security_group.jenkins_sg_primary",
            "aws_security_group.lb_sg",
            "aws_subnet.primary_subnet_1",
            "aws_vpc.vpc_primary",
            "aws_vpc.vpc_secondary",
            "aws_vpc_peering_connection.primary_to_secondary",
            "data.aws_availability_zones.azs",
            "data.aws_ssm_parameter.linuxAMI_primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-primary-default-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f247d1b123bcc47",
            "original_route_table_id": "rtb-0fc3367f7a5e40ed9",
            "route_table_id": "rtb-081ced60ff7dbace6",
            "vpc_id": "vpc-0afa464e735955a14"
          },
          "dependencies": [
            "aws_internet_gateway.igw_primary",
            "aws_route_table.internet_route_primary",
            "aws_vpc.vpc_primary",
            "aws_vpc.vpc_secondary",
            "aws_vpc_peering_connection.primary_to_secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-secondary-default-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c0d74129a4ec611",
            "original_route_table_id": "rtb-098634d02ea2d4ee9",
            "route_table_id": "rtb-0611e3a4bf145128f",
            "vpc_id": "vpc-0cb3f15947612bd9a"
          },
          "dependencies": [
            "aws_internet_gateway.igw_secondary",
            "aws_route_table.internet_route_secondary",
            "aws_vpc.vpc_primary",
            "aws_vpc.vpc_secondary",
            "aws_vpc_peering_connection.primary_to_secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-081ced60ff7dbace6",
            "owner_id": "412675759620",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e746911e86f30ba",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.10.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0877dd9cd94439a3a"
              }
            ],
            "tags": {
              "Name": "Primary-Region-RT"
            },
            "vpc_id": "vpc-0afa464e735955a14"
          },
          "dependencies": [
            "aws_internet_gateway.igw_primary",
            "aws_vpc.vpc_primary",
            "aws_vpc.vpc_secondary",
            "aws_vpc_peering_connection.primary_to_secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0611e3a4bf145128f",
            "owner_id": "412675759620",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021e281abd83b0a2f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.10.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0877dd9cd94439a3a"
              }
            ],
            "tags": {
              "Name": "Secondary-Region-RT"
            },
            "vpc_id": "vpc-0cb3f15947612bd9a"
          },
          "dependencies": [
            "aws_internet_gateway.igw_secondary",
            "aws_vpc.vpc_primary",
            "aws_vpc.vpc_secondary",
            "aws_vpc_peering_connection.primary_to_secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412675759620:security-group/sg-09feae6ef956dc9cd",
            "description": "Allow TCP/8080 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09feae6ef956dc9cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public IP(s)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.10.1.0/24"
                ],
                "description": "allow traffic from secondary",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow anyone on port 8080",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f839c116a171177b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jenkins-sg-primary",
            "name_prefix": "",
            "owner_id": "412675759620",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0afa464e735955a14"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.vpc_primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:412675759620:security-group/sg-0b3dc5f0a4ef571a8",
            "description": "Allow TCP/8080 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3dc5f0a4ef571a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "Allow traffic from primary",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-sg-secondary",
            "name_prefix": "",
            "owner_id": "412675759620",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0cb3f15947612bd9a"
          },
          "dependencies": [
            "aws_vpc.vpc_secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412675759620:security-group/sg-0f839c116a171177b",
            "description": "Allow 443 and traffic to Jenkins SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f839c116a171177b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 from anywhere for redirection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "412675759620",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0afa464e735955a14"
          },
          "dependencies": [
            "aws_vpc.vpc_primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412675759620:subnet/subnet-09980bec1319e3b4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-09980bec1319e3b4d",
            "map_public_ip_on_launch": false,
            "owner_id": "412675759620",
            "vpc_id": "vpc-0afa464e735955a14"
          },
          "dependencies": [
            "aws_vpc.vpc_primary",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412675759620:subnet/subnet-0c4bedce1d3fd01e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0c4bedce1d3fd01e4",
            "map_public_ip_on_launch": false,
            "owner_id": "412675759620",
            "vpc_id": "vpc-0afa464e735955a14"
          },
          "dependencies": [
            "aws_vpc.vpc_primary",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:412675759620:subnet/subnet-0bc558d558258c151",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.10.1.0/24",
            "id": "subnet-0bc558d558258c151",
            "map_public_ip_on_launch": false,
            "owner_id": "412675759620",
            "vpc_id": "vpc-0cb3f15947612bd9a"
          },
          "dependencies": [
            "aws_vpc.vpc_secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412675759620:vpc/vpc-0afa464e735955a14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0adc348445f567c46",
            "default_route_table_id": "rtb-0fc3367f7a5e40ed9",
            "default_security_group_id": "sg-068f9667b2ff2687e",
            "dhcp_options_id": "dopt-053933af337802a53",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0afa464e735955a14",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fc3367f7a5e40ed9",
            "owner_id": "412675759620",
            "tags": {
              "Name": "primary-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:412675759620:vpc/vpc-0cb3f15947612bd9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.10.0.0/16",
            "default_network_acl_id": "acl-023fc45f18c32c4a2",
            "default_route_table_id": "rtb-098634d02ea2d4ee9",
            "default_security_group_id": "sg-0859cb45ff4c2f46f",
            "dhcp_options_id": "dopt-0ab873fda29f890ca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cb3f15947612bd9a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-098634d02ea2d4ee9",
            "owner_id": "412675759620",
            "tags": {
              "Name": "secondary-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "primary_to_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0877dd9cd94439a3a",
            "peer_owner_id": "412675759620",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0cb3f15947612bd9a",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0afa464e735955a14"
          },
          "dependencies": [
            "aws_vpc.vpc_primary",
            "aws_vpc.vpc_secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "secondary_accept_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0877dd9cd94439a3a",
            "peer_owner_id": "412675759620",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0cb3f15947612bd9a",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0afa464e735955a14",
            "vpc_peering_connection_id": "pcx-0877dd9cd94439a3a"
          },
          "dependencies": [
            "aws_vpc.vpc_primary",
            "aws_vpc.vpc_secondary",
            "aws_vpc_peering_connection.primary_to_secondary"
          ]
        }
      ]
    }
  ]
}